# repo-template

./: .gitignore  Makefile  pyproject.toml
project/: __main__.py
scripts/: generate_envvars.sh
